# AI-newsletter

./: .bazelignore  .gitignore  BUILD.bazel  MODULE.bazel  README.md  alternative_dependency.md  api.md  client-server.md  design.md  external_dependency.md  install.sh  package-lock.json  package.json  pnpm-lock.yaml  prd.md  requirements.in  requirements.txt  research.md  runbook.md
.agents/skills/bazel_python_ide/: SKILL.md
.agents/skills/bazel_testing/: SKILL.md
.agents/skills/mermaid_charts/: SKILL.md
.agents/skills/package_managers/: SKILL.md
.github/workflows/: bazel-test.yml
backend/: BUILD.bazel  auth.py  main.py  storage.py
backend/tests/: BUILD.bazel  test_api.py
env/: environment.yml  package.json
frontend/: BUILD.bazel  angular.json  app.js  index.css  index.html  tsconfig.app.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.css  app.component.html  app.component.ts
frontend/tests/: BUILD.bazel  test_frontend.py
