module(
    name = "ai_newsletter",
    version = "1.0",
)

bazel_dep(name = "rules_python", version = "0.31.0")
bazel_dep(name = "rules_shell", version = "0.3.0")
bazel_dep(name = "aspect_rules_js", version = "3.0.1")
bazel_dep(name = "aspect_rules_ts", version = "3.8.5")
bazel_dep(name = "bazel_lib", version = "3.2.1")
bazel_dep(name = "rules_nodejs", version = "6.3.3")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "apple_support", version = "1.17.1")
bazel_dep(name = "rules_cc", version = "0.1.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
    is_default = True,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pip")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts_ext.setup(token_navigation = True)
use_repo(rules_ts_ext, "npm_typescript")
