load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@pip//:requirements.bzl", "requirement")

py_library(
    name = "storage",
    srcs = ["storage.py"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "main",
    srcs = ["main.py"],
    deps = [
        ":storage",
        requirement("fastapi"),
        requirement("pydantic"),
        requirement("uvicorn"),
        "@rules_python//python/runfiles",
    ],
    data = ["//frontend:all_files"],
    visibility = ["//visibility:public"],
)

