load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@pip//:requirements.bzl", "requirement")

py_library(
    name = "storage",
    srcs = ["storage.py"],
    visibility = ["//visibility:public"],
)

py_library(
    name = "auth",
    srcs = ["auth.py"],
    deps = [
        requirement("google-auth"),
        requirement("requests"),
    ],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "main",
    srcs = ["main.py"],
    deps = [
        ":storage",
        ":auth",
        requirement("fastapi"),
        requirement("pydantic"),
        requirement("uvicorn"),
        requirement("python-dotenv"),
        "@rules_python//python/runfiles",
    ],
    data = ["//frontend:all_files"],
    visibility = ["//visibility:public"],
)
