load("@@aspect_rules_js++npm+npm__at_angular_cli__19.2.22_1454392027//:package_json.bzl", ng_bin = "bin")

ng_bin.ng(
    name = "build",
    srcs = glob(["src/**/*"]) + [
        "angular.json",
        "tsconfig.json",
        "tsconfig.app.json",
        "//:node_modules",
    ],
    args = [
        "build",
        "--output-path=dist",
        "--configuration=production",
    ],
    out_dirs = ["dist"],
    chdir = package_name(),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "src_files",
    srcs = glob(["src/**/*"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    srcs = [":build"],
    visibility = ["//visibility:public"],
)
