load("@rules_python//python:defs.bzl", "py_test")
load("@pip//:requirements.bzl", "requirement")

py_test(
    name = "test_api",
    srcs = ["test_api.py"],
    data = [
        "//frontend:all_files",
    ],
    deps = [
        "//backend:main",
        requirement("pytest"),
        requirement("fastapi"),
        requirement("httpx"),
    ],
    main = "test_api.py",
)
