load("@rules_python//python:defs.bzl", "py_test")
load("@pip//:requirements.bzl", "requirement")

py_test(
    name = "test_api",
    srcs = ["test_api.py"],
    data = [
        "//frontend:all_files",
    ],
    deps = [
        "//backend:main",
        "//backend:auth",
        requirement("pytest"),
        requirement("fastapi"),
        requirement("httpx"),
        requirement("google-auth"),
    ],
    main = "test_api.py",
)
